--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Jun 03 16:50:16 2023
+<td>Mon Jun 05 23:40:45 2023
 </td>
 </tr>
 <tr>
@@ -100,22 +100,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>207.397</td>
+<td>208.055</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>163.222</td>
+<td>163.347</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>44.174</td>
+<td>44.708</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>28.499</td>
+<td>28.510</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>81.501</td>
+<td>81.490</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,23 +192,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>33.586</td>
-<td>102.762</td>
-<td>136.348</td>
+<td>33.870</td>
+<td>102.803</td>
+<td>136.673</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>2.469</td>
+<td>2.527</td>
 <td>23.366</td>
-<td>64.587</td>
+<td>64.732</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>2.453</td>
-<td>1.137</td>
-<td>6.462</td>
+<td>2.511</td>
+<td>1.184</td>
+<td>6.650</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -222,15 +222,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>1.852</td>
+<td>2.058</td>
 <td>NA</td>
 <td>12.500</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>19.141
-<td>6.071
-<td>20.703
+<td>19.694
+<td>6.317
+<td>20.455
 </tr>
 <tr>
 <td>BSRAM</td>
@@ -248,16 +248,20 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top_mac_to_fifo_test</td>
-<td>31.057</td>
-<td>31.057(30.953)</td>
+<td>31.263</td>
+<td>31.263(31.096)</td>
 <tr>
 <td>top_mac_to_fifo_test/configurator/</td>
-<td>0.009</td>
-<td>0.009(0.000)</td>
+<td>0.144</td>
+<td>0.144(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/controller/</td>
-<td>0.142</td>
-<td>0.142(0.000)</td>
+<td>0.141</td>
+<td>0.141(0.000)</td>
+<tr>
+<td>top_mac_to_fifo_test/fifo_overflow_control/</td>
+<td>0.008</td>
+<td>0.008(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/</td>
 <td>1.097</td>
@@ -328,12 +332,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.035(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/rx_frm_len_fifo/</td>
-<td>15.260</td>
-<td>15.260(0.000)</td>
+<td>15.262</td>
+<td>15.262(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/rxfifo/</td>
-<td>14.445</td>
-<td>14.445(0.000)</td>
+<td>14.444</td>
+<td>14.444(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -343,19 +347,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>phy_rx_clk</td>
-<td>100.000</td>
-<td>30.111</td>
-</tr>
-<tr>
 <td>phy_tx_clk</td>
 <td>100.000</td>
-<td>0.879</td>
+<td>0.888</td>
+</tr>
+<tr>
+<td>phy_rx_clk</td>
+<td>100.000</td>
+<td>30.112</td>
 </tr>
 <tr>
 <td>clk</td>
 <td>100.000</td>
-<td>0.116</td>
+<td>0.331</td>
 </tr>
 </table>
 </div><!-- content -->
