--- a/impl/pnr/EthernetBRIDGE.rpt.html
+++ b/impl/pnr/EthernetBRIDGE.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Jun 03 16:50:16 2023
+<td>Mon Jun 05 23:40:45 2023
 </td>
 </tr>
 <tr>
@@ -97,23 +97,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.118s, Elapsed time = 0h 0m 0.118s
-   Placement Phase 1: CPU time = 0h 0m 0.24s, Elapsed time = 0h 0m 0.24s
-   Placement Phase 2: CPU time = 0h 0m 0.142s, Elapsed time = 0h 0m 0.142s
-   Placement Phase 3: CPU time = 0h 0m 0.893s, Elapsed time = 0h 0m 0.892s
+   Placement Phase 0: CPU time = 0h 0m 0.136s, Elapsed time = 0h 0m 0.137s
+   Placement Phase 1: CPU time = 0h 0m 0.243s, Elapsed time = 0h 0m 0.244s
+   Placement Phase 2: CPU time = 0h 0m 0.147s, Elapsed time = 0h 0m 0.147s
+   Placement Phase 3: CPU time = 0h 0m 0.874s, Elapsed time = 0h 0m 0.873s
    Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.126s, Elapsed time = 0h 0m 0.127s
-   Routing Phase 2: CPU time = 0h 0m 0.425s, Elapsed time = 0h 0m 0.425s
-   Total Routing: CPU time = 0h 0m 0.552s, Elapsed time = 0h 0m 0.553s
+   Routing Phase 1: CPU time = 0h 0m 0.13s, Elapsed time = 0h 0m 0.13s
+   Routing Phase 2: CPU time = 0h 0m 0.482s, Elapsed time = 0h 0m 0.481s
+   Total Routing: CPU time = 0h 0m 0.613s, Elapsed time = 0h 0m 0.612s
 Generate output files:
    CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 336MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 312MB</td>
 </tr>
 </table>
 <br/>
@@ -128,12 +128,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>1091/20736</td>
+<td>1149/20736</td>
 <td>6%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>953(873 LUT, 80 ALU, 0 ROM16)</td>
+<td>1011(907 LUT, 104 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>668/15909</td>
+<td>704/15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -153,7 +153,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>658/15552</td>
+<td>694/15552</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -168,17 +168,17 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>731/10368</td>
+<td>758/10368</td>
 <td>8%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
-<td>31</td>
+<td>32</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">I/O Buf</td>
-<td>31</td>
+<td>32</td>
 <td>-</td>
 </tr>
 <tr>
@@ -188,7 +188,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Output Buf</td>
-<td>22</td>
+<td>23</td>
 <td>-</td>
 </tr>
 <tr>
@@ -259,19 +259,19 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 0</td>
-<td>7/19(36%)</td>
+<td>6/19(31%)</td>
 </tr>
 <tr>
 <td class="label">bank 1</td>
-<td>8/12(66%)</td>
+<td>3/12(25%)</td>
 </tr>
 <tr>
 <td class="label">bank 2</td>
-<td>2/12(16%)</td>
+<td>3/12(25%)</td>
 </tr>
 <tr>
 <td class="label">bank 3</td>
-<td>0/24(0%)</td>
+<td>5/24(20%)</td>
 </tr>
 <tr>
 <td class="label">bank 4</td>
@@ -287,7 +287,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 7</td>
-<td>0/8(0%)</td>
+<td>1/8(12%)</td>
 </tr>
 </table>
 <br/>
@@ -303,11 +303,11 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">LW</td>
-<td>1/8(13%)</td>
+<td>2/8(25%)</td>
 </tr>
 <tr>
 <td class="label">GCLK_PIN</td>
-<td>3/6(50%)</td>
+<td>2/6(34%)</td>
 </tr>
 <tr>
 <td class="label">PLL</td>
@@ -333,17 +333,22 @@ Generate output files:
 <tr>
 <td class="label">clk_d</td>
 <td>PRIMARY</td>
-<td> TL</td>
+<td> TR TL BR</td>
 </tr>
 <tr>
 <td class="label">phy_rx_clk_d</td>
 <td>PRIMARY</td>
-<td> TL BR BL</td>
+<td> TR TL BR BL</td>
 </tr>
 <tr>
 <td class="label">phy_tx_clk_d</td>
 <td>PRIMARY</td>
-<td> TR BR BL</td>
+<td> TL BR BL</td>
+</tr>
+<tr>
+<td class="label">reset_mac</td>
+<td>LW</td>
+<td> -</td>
 </tr>
 <tr>
 <td class="label">clk_tx_ena_int</td>
@@ -640,12 +645,12 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[0]</td>
+<td class="label">phy_reset</td>
 <td></td>
-<td>117/1</td>
-<td>N</td>
+<td>12/7</td>
+<td>Y</td>
 <td>out</td>
-<td>IOT40[A]</td>
+<td>IOL27[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -654,17 +659,36 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[0]</td>
+<td></td>
+<td>105/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR7[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_buff[1]</td>
 <td></td>
-<td>114/1</td>
+<td>84/3</td>
 <td>N</td>
 <td>out</td>
-<td>IOT42[B]</td>
+<td>IOR42[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -673,17 +697,17 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_buff[2]</td>
 <td></td>
-<td>111/1</td>
+<td>101/2</td>
 <td>N</td>
 <td>out</td>
-<td>IOT50[A]</td>
+<td>IOR20[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -692,17 +716,17 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_buff[3]</td>
 <td></td>
-<td>106/2</td>
+<td>82/3</td>
 <td>N</td>
 <td>out</td>
-<td>IOR7[A]</td>
+<td>IOR45[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -718,10 +742,10 @@ Generate output files:
 <tr>
 <td class="label">data_from_buff[4]</td>
 <td></td>
-<td>102/2</td>
+<td>98/2</td>
 <td>N</td>
 <td>out</td>
-<td>IOR20[A]</td>
+<td>IOR27[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -737,10 +761,10 @@ Generate output files:
 <tr>
 <td class="label">data_from_buff[5]</td>
 <td></td>
-<td>123/0</td>
+<td>79/3</td>
 <td>N</td>
 <td>out</td>
-<td>IOT27[A]</td>
+<td>IOR49[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -749,17 +773,17 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_buff[6]</td>
 <td></td>
-<td>121/1</td>
+<td>92/3</td>
 <td>N</td>
 <td>out</td>
-<td>IOT30[A]</td>
+<td>IOR35[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -768,17 +792,17 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_buff[7]</td>
 <td></td>
-<td>119/1</td>
+<td>85/3</td>
 <td>N</td>
 <td>out</td>
-<td>IOT38[A]</td>
+<td>IOR38[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -787,7 +811,7 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1274,16 +1298,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">123/0</td>
-<td>data_from_buff[5]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT27[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1308,16 +1332,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">121/1</td>
-<td>data_from_buff[6]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT30[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1342,16 +1366,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">119/1</td>
-<td>data_from_buff[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT38[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1376,16 +1400,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">117/1</td>
-<td>data_from_buff[0]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT40[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1427,16 +1451,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">114/1</td>
-<td>data_from_buff[1]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT42[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1478,16 +1502,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">111/1</td>
-<td>data_from_buff[2]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT50[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -2086,7 +2110,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">4/7</td>
@@ -2103,7 +2127,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">6/7</td>
@@ -2120,7 +2144,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">7/7</td>
@@ -2137,7 +2161,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">9/7</td>
@@ -2154,7 +2178,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">10/7</td>
@@ -2171,7 +2195,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">11/7</td>
@@ -2188,24 +2212,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">12/7</td>
-<td>-</td>
-<td>in</td>
+<td>phy_reset</td>
+<td>out</td>
 <td>IOL27[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">25/6</td>
@@ -2396,43 +2420,26 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">106/2</td>
-<td>data_from_buff[3]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOR7[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">105/2</td>
-<td>-</td>
-<td>in</td>
-<td>IOR7[B]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">102/2</td>
-<td>data_from_buff[4]</td>
+<td>data_from_buff[0]</td>
 <td>out</td>
-<td>IOR20[A]</td>
+<td>IOR7[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -2446,10 +2453,10 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">101/2</td>
+<td class="label">102/2</td>
 <td>-</td>
 <td>in</td>
-<td>IOR20[B]</td>
+<td>IOR20[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -2459,6 +2466,23 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">101/2</td>
+<td>data_from_buff[2]</td>
+<td>out</td>
+<td>IOR20[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -2566,18 +2590,18 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">98/2</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[4]</td>
+<td>out</td>
 <td>IOR27[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -2613,7 +2637,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">142/3</td>
@@ -2630,7 +2654,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">143/3</td>
@@ -2647,7 +2671,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">20/3</td>
@@ -2664,7 +2688,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">22/3</td>
@@ -2681,7 +2705,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">21/3</td>
@@ -2698,7 +2722,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">96/3</td>
@@ -2715,7 +2739,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">95/3</td>
@@ -2732,7 +2756,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">94/3</td>
@@ -2749,7 +2773,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">93/3</td>
@@ -2766,24 +2790,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">92/3</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[6]</td>
+<td>out</td>
 <td>IOR35[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">90/3</td>
@@ -2800,7 +2824,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">88/3</td>
@@ -2817,7 +2841,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">87/3</td>
@@ -2834,7 +2858,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">86/3</td>
@@ -2851,24 +2875,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">85/3</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[7]</td>
+<td>out</td>
 <td>IOR38[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">15/3</td>
@@ -2885,24 +2909,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">84/3</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[1]</td>
+<td>out</td>
 <td>IOR42[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">83/3</td>
@@ -2919,24 +2943,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">82/3</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[3]</td>
+<td>out</td>
 <td>IOR45[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">80/3</td>
@@ -2953,24 +2977,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">79/3</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[5]</td>
+<td>out</td>
 <td>IOR49[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">78/3</td>
@@ -2987,7 +3011,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">76/3</td>
@@ -3004,7 +3028,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>-</td>
+<td>1.8</td>
 </tr>
 </table>
 <br/>
