--- a/impl/gwsynthesis/EthernetBRIDGE_syn.rpt.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn.rpt.html
@@ -93,7 +93,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Jun 04 01:25:51 2023
+<td>Mon Jun 05 23:40:04 2023
 </td>
 </tr>
 <tr>
@@ -109,11 +109,11 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.312s, Elapsed time = 0h 0m 0.425s, Peak memory usage = 113.012MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.041s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.03s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.043s, Peak memory usage = 113.012MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.015s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 113.012MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.046s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.015s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.734s, Elapsed time = 0h 0m 0.772s, Peak memory usage = 113.012MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.048s, Peak memory usage = 113.012MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.068s, Peak memory usage = 113.012MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.359s, Elapsed time = 0h 0m 0.427s, Peak memory usage = 104.578MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.044s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.034s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.054s, Peak memory usage = 104.578MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.015s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 104.578MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.046s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.017s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.023s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.75s, Elapsed time = 0h 0m 0.784s, Peak memory usage = 104.578MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.052s, Peak memory usage = 104.578MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.065s, Peak memory usage = 104.578MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 113.012MB</td>
+<td>CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 104.578MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -125,11 +125,11 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label"><b>I/O Port </b></td>
-<td>31</td>
+<td>32</td>
 </tr>
 <tr>
 <td class="label"><b>I/O Buf </b></td>
-<td>31</td>
+<td>32</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspIBUF</td>
@@ -137,7 +137,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspOBUF</td>
-<td>22</td>
+<td>23</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspIOBUF</td>
@@ -145,7 +145,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label"><b>Register </b></td>
-<td>701</td>
+<td>704</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFF</td>
@@ -169,27 +169,27 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFC</td>
-<td>275</td>
+<td>277</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFCE</td>
-<td>331</td>
+<td>332</td>
 </tr>
 <tr>
 <td class="label"><b>LUT </b></td>
-<td>898</td>
+<td>901</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT2</td>
-<td>143</td>
+<td>142</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT3</td>
-<td>239</td>
+<td>237</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT4</td>
-<td>516</td>
+<td>522</td>
 </tr>
 <tr>
 <td class="label"><b>ALU </b></td>
@@ -233,12 +233,12 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>1139(907 LUTs, 94 ALUs, 23 SSRAMs) / 20736</td>
+<td>1142(910 LUTs, 94 ALUs, 23 SSRAMs) / 20736</td>
 <td>6%</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>701 / 15909</td>
+<td>704 / 15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -248,7 +248,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as FF</td>
-<td>701 / 15909</td>
+<td>704 / 15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -346,258 +346,6 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>5.501</td>
-</tr>
-<tr>
-<td class="label">Data Arrival Time</td>
-<td>5.292</td>
-</tr>
-<tr>
-<td class="label">Data Required Time</td>
-<td>10.793</td>
-</tr>
-<tr>
-<td class="label">From</td>
-<td>rxfifo/count_5_s0</td>
-</tr>
-<tr>
-<td class="label">To</td>
-<td>controller/state.prepare2_s0</td>
-</tr>
-<tr>
-<td class="label">Launch Clk</td>
-<td>phy_rx_clk[R]</td>
-</tr>
-<tr>
-<td class="label">Latch Clk</td>
-<td>phy_tx_clk[R]</td>
-</tr>
-</table>
-<b>Data Arrival Path:</b>
-<table class="summary_table">
-<tr>
-<th>AT</th>
-<th>DELAY</th>
-<th>TYPE</th>
-<th>RF</th>
-<th>FANOUT</th>
-<th>NODE</th>
-</tr>
-<tr>
-<td>0.000</td>
-<td>0.000</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td>phy_rx_clk</td>
-</tr>
-<tr>
-<td>0.000</td>
-<td>0.000</td>
-<td>tCL</td>
-<td>RR</td>
-<td>1</td>
-<td>phy_rx_clk_ibuf/I</td>
-</tr>
-<tr>
-<td>0.683</td>
-<td>0.683</td>
-<td>tINS</td>
-<td>RR</td>
-<td>284</td>
-<td>phy_rx_clk_ibuf/O</td>
-</tr>
-<tr>
-<td>0.863</td>
-<td>0.180</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>rxfifo/count_5_s0/CLK</td>
-</tr>
-<tr>
-<td>1.095</td>
-<td>0.232</td>
-<td>tC2Q</td>
-<td>RF</td>
-<td>2</td>
-<td>rxfifo/count_5_s0/Q</td>
-</tr>
-<tr>
-<td>1.332</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>n223_s3/I1</td>
-</tr>
-<tr>
-<td>1.887</td>
-<td>0.555</td>
-<td>tINS</td>
-<td>FF</td>
-<td>7</td>
-<td>n223_s3/F</td>
-</tr>
-<tr>
-<td>2.124</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>n223_s1/I1</td>
-</tr>
-<tr>
-<td>2.679</td>
-<td>0.555</td>
-<td>tINS</td>
-<td>FF</td>
-<td>1</td>
-<td>n223_s1/F</td>
-</tr>
-<tr>
-<td>2.916</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/n219_s13/I1</td>
-</tr>
-<tr>
-<td>3.471</td>
-<td>0.555</td>
-<td>tINS</td>
-<td>FF</td>
-<td>8</td>
-<td>controller/n219_s13/F</td>
-</tr>
-<tr>
-<td>3.708</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/n225_s12/I1</td>
-</tr>
-<tr>
-<td>4.263</td>
-<td>0.555</td>
-<td>tINS</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/n225_s12/F</td>
-</tr>
-<tr>
-<td>4.500</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/n225_s11/I1</td>
-</tr>
-<tr>
-<td>5.055</td>
-<td>0.555</td>
-<td>tINS</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/n225_s11/F</td>
-</tr>
-<tr>
-<td>5.292</td>
-<td>0.237</td>
-<td>tNET</td>
-<td>FF</td>
-<td>1</td>
-<td>controller/state.prepare2_s0/D</td>
-</tr>
-</table>
-<b>Data Required Path:</b>
-<table class="summary_table">
-<tr>
-<th>AT</th>
-<th>DELAY</th>
-<th>TYPE</th>
-<th>RF</th>
-<th>FANOUT</th>
-<th>NODE</th>
-</tr>
-<tr>
-<td>10.000</td>
-<td>0.000</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td>phy_tx_clk</td>
-</tr>
-<tr>
-<td>10.000</td>
-<td>0.000</td>
-<td>tCL</td>
-<td>RR</td>
-<td>1</td>
-<td>phy_tx_clk_ibuf/I</td>
-</tr>
-<tr>
-<td>10.682</td>
-<td>0.683</td>
-<td>tINS</td>
-<td>RR</td>
-<td>356</td>
-<td>phy_tx_clk_ibuf/O</td>
-</tr>
-<tr>
-<td>10.863</td>
-<td>0.180</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>controller/state.prepare2_s0/CLK</td>
-</tr>
-<tr>
-<td>10.828</td>
-<td>-0.035</td>
-<td>tUnc</td>
-<td> </td>
-<td> </td>
-<td>controller/state.prepare2_s0</td>
-</tr>
-<tr>
-<td>10.793</td>
-<td>-0.035</td>
-<td>tSu</td>
-<td> </td>
-<td>1</td>
-<td>controller/state.prepare2_s0</td>
-</tr>
-</table>
-<b>Path Statistics:</b>
-<table class="summary_table">
-<tr>
-<td class="label">Clock Skew:</td>
-<td>0.000</td>
-</tr>
-<tr>
-<td class="label">Setup Relationship:</td>
-<td>10.000</td>
-</tr>
-<tr>
-<td class="label">Logic Level:</td>
-<td>6</td>
-</tr>
-<tr>
-<td class="label">Arrival Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
-<tr>
-<td class="label">Arrival Data Path Delay:</td><td> cell: 2.775, 62.655%; route: 1.422, 32.107%; tC2Q: 0.232, 5.238%</td></tr>
-<tr>
-<td class="label">Required Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
-</table>
-<br/>
-<h3>Path&nbsp2</h3>
-<b>Path Summary:</b></br>
-<table class="summary_table">
-<tr>
-<td class="label">Slack</td>
 <td>5.536</td>
 </tr>
 <tr>
@@ -656,7 +404,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -795,7 +543,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -837,7 +585,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td class="label">Required Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
 </table>
 <br/>
-<h3>Path&nbsp3</h3>
+<h3>Path&nbsp2</h3>
 <b>Path Summary:</b></br>
 <table class="summary_table">
 <tr>
@@ -900,7 +648,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1039,7 +787,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1081,7 +829,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td class="label">Required Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
 </table>
 <br/>
-<h3>Path&nbsp4</h3>
+<h3>Path&nbsp3</h3>
 <b>Path Summary:</b></br>
 <table class="summary_table">
 <tr>
@@ -1144,7 +892,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1283,7 +1031,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1325,7 +1073,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td class="label">Required Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
 </table>
 <br/>
-<h3>Path&nbsp5</h3>
+<h3>Path&nbsp4</h3>
 <b>Path Summary:</b></br>
 <table class="summary_table">
 <tr>
@@ -1388,7 +1136,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1527,7 +1275,7 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>356</td>
+<td>359</td>
 <td>phy_tx_clk_ibuf/O</td>
 </tr>
 <tr>
@@ -1545,6 +1293,250 @@ E:\EthernetBRIDGE\src\tx_control.sv<br>
 <td> </td>
 <td>1</td>
 <td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/crc_reg_24_s1</td>
+</tr>
+</table>
+<b>Path Statistics:</b>
+<table class="summary_table">
+<tr>
+<td class="label">Clock Skew:</td>
+<td>0.000</td>
+</tr>
+<tr>
+<td class="label">Setup Relationship:</td>
+<td>10.000</td>
+</tr>
+<tr>
+<td class="label">Logic Level:</td>
+<td>6</td>
+</tr>
+<tr>
+<td class="label">Arrival Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
+<tr>
+<td class="label">Arrival Data Path Delay:</td><td> cell: 2.775, 62.655%; route: 1.422, 32.107%; tC2Q: 0.232, 5.238%</td></tr>
+<tr>
+<td class="label">Required Clock Path Delay:</td><td> cell: 0.683, 79.130%; route: 0.180, 20.870%</td></tr>
+</table>
+<br/>
+<h3>Path&nbsp5</h3>
+<b>Path Summary:</b></br>
+<table class="summary_table">
+<tr>
+<td class="label">Slack</td>
+<td>5.536</td>
+</tr>
+<tr>
+<td class="label">Data Arrival Time</td>
+<td>5.292</td>
+</tr>
+<tr>
+<td class="label">Data Required Time</td>
+<td>10.828</td>
+</tr>
+<tr>
+<td class="label">From</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/pause_frm_reg_7_s1</td>
+</tr>
+<tr>
+<td class="label">To</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/crc_reg_26_s1</td>
+</tr>
+<tr>
+<td class="label">Launch Clk</td>
+<td>phy_tx_clk[R]</td>
+</tr>
+<tr>
+<td class="label">Latch Clk</td>
+<td>phy_tx_clk[R]</td>
+</tr>
+</table>
+<b>Data Arrival Path:</b>
+<table class="summary_table">
+<tr>
+<th>AT</th>
+<th>DELAY</th>
+<th>TYPE</th>
+<th>RF</th>
+<th>FANOUT</th>
+<th>NODE</th>
+</tr>
+<tr>
+<td>0.000</td>
+<td>0.000</td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td>phy_tx_clk</td>
+</tr>
+<tr>
+<td>0.000</td>
+<td>0.000</td>
+<td>tCL</td>
+<td>RR</td>
+<td>1</td>
+<td>phy_tx_clk_ibuf/I</td>
+</tr>
+<tr>
+<td>0.683</td>
+<td>0.683</td>
+<td>tINS</td>
+<td>RR</td>
+<td>359</td>
+<td>phy_tx_clk_ibuf/O</td>
+</tr>
+<tr>
+<td>0.863</td>
+<td>0.180</td>
+<td>tNET</td>
+<td>RR</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/pause_frm_reg_7_s1/CLK</td>
+</tr>
+<tr>
+<td>1.095</td>
+<td>0.232</td>
+<td>tC2Q</td>
+<td>RF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/pause_frm_reg_7_s1/Q</td>
+</tr>
+<tr>
+<td>1.332</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n268_s4/I1</td>
+</tr>
+<tr>
+<td>1.887</td>
+<td>0.555</td>
+<td>tINS</td>
+<td>FF</td>
+<td>2</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n268_s4/F</td>
+</tr>
+<tr>
+<td>2.124</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n268_s3/I1</td>
+</tr>
+<tr>
+<td>2.679</td>
+<td>0.555</td>
+<td>tINS</td>
+<td>FF</td>
+<td>7</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n268_s3/F</td>
+</tr>
+<tr>
+<td>2.916</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n290_s4/I1</td>
+</tr>
+<tr>
+<td>3.471</td>
+<td>0.555</td>
+<td>tINS</td>
+<td>FF</td>
+<td>5</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n290_s4/F</td>
+</tr>
+<tr>
+<td>3.708</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n264_s3/I1</td>
+</tr>
+<tr>
+<td>4.263</td>
+<td>0.555</td>
+<td>tINS</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n264_s3/F</td>
+</tr>
+<tr>
+<td>4.500</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n264_s2/I1</td>
+</tr>
+<tr>
+<td>5.055</td>
+<td>0.555</td>
+<td>tINS</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/n264_s2/F</td>
+</tr>
+<tr>
+<td>5.292</td>
+<td>0.237</td>
+<td>tNET</td>
+<td>FF</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/crc_reg_26_s1/D</td>
+</tr>
+</table>
+<b>Data Required Path:</b>
+<table class="summary_table">
+<tr>
+<th>AT</th>
+<th>DELAY</th>
+<th>TYPE</th>
+<th>RF</th>
+<th>FANOUT</th>
+<th>NODE</th>
+</tr>
+<tr>
+<td>10.000</td>
+<td>0.000</td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td>phy_tx_clk</td>
+</tr>
+<tr>
+<td>10.000</td>
+<td>0.000</td>
+<td>tCL</td>
+<td>RR</td>
+<td>1</td>
+<td>phy_tx_clk_ibuf/I</td>
+</tr>
+<tr>
+<td>10.682</td>
+<td>0.683</td>
+<td>tINS</td>
+<td>RR</td>
+<td>359</td>
+<td>phy_tx_clk_ibuf/O</td>
+</tr>
+<tr>
+<td>10.863</td>
+<td>0.180</td>
+<td>tNET</td>
+<td>RR</td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/crc_reg_26_s1/CLK</td>
+</tr>
+<tr>
+<td>10.828</td>
+<td>-0.035</td>
+<td>tSu</td>
+<td> </td>
+<td>1</td>
+<td>mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/u_crc_gen/crc_reg_26_s1</td>
 </tr>
 </table>
 <b>Path Statistics:</b>
