--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">10</td>
 <td align = "center">20</td>
-<td align = "center">14</td>
+<td align = "center">13</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -68,7 +68,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">37</td>
 <td align = "center">-</td>
-<td align = "center">126</td>
+<td align = "center">123</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--fifo_overflow_control
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
+<td align = "center">3</td>
+<td align = "center">-</td>
+<td align = "center">6</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -86,7 +95,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.sv)</td>
 <td align = "center">40</td>
 <td align = "center">38</td>
-<td align = "center">13</td>
+<td align = "center">14</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
